postgres_fdw: support gp2gp foreign tables
https://github.com/greenplum-db/gpdb/wiki/Greenplum-to-Greenplum

Branches postgres_fdw's workflow, scan foreign tables via gp2gp
interface if the value of option 'mpp_execute' is "all segments"

Signed-off-by: Ming Li <mli@apache.org>
Signed-off-by: Wen Lin <wlin@pivotal.io>
Signed-off-by: Tingfang Bao <bbao@pivotal.io>

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -24,6 +24,7 @@ all:
 	$(MAKE) -C contrib/pg_xlogdump all
 	$(MAKE) -C contrib/hstore all
 	$(MAKE) -C contrib/pgcrypto all
+	$(MAKE) -C contrib/postgres_fdw all
 	$(MAKE) -C gpAux/extensions all
 	$(MAKE) -C gpAux/gpperfmon all
 	$(MAKE) -C gpAux/platform all
@@ -57,6 +58,7 @@ install:
 	$(MAKE) -C contrib/pg_xlogdump $@
 	$(MAKE) -C contrib/hstore $@
 	$(MAKE) -C contrib/pgcrypto $@
+	$(MAKE) -C contrib/postgres_fdw $@
 	$(MAKE) -C gpMgmt $@
 	$(MAKE) -C gpAux/extensions $@
 	$(MAKE) -C gpAux/gpperfmon $@
