--- a/src/test/isolation2/Makefile
+++ b/src/test/isolation2/Makefile
@@ -60,3 +60,6 @@ installcheck: install
 
 installcheck-resgroup: install
 	./pg_isolation2_regress --init-file=$(top_builddir)/src/test/regress/init_file --init-file=./init_file_resgroup --psqldir='$(PSQLDIR)' --inputdir=$(srcdir) --dbname=isolation2resgrouptest --schedule=$(srcdir)/isolation2_resgroup_schedule
+
+installcheck-gp2gp: install
+	./pg_isolation2_regress --init-file=$(top_builddir)/src/test/regress/init_file --init-file=./init_file_isolation2 --psqldir='$(PSQLDIR)' --inputdir=$(srcdir) --dbname=isolation2gp2gp --schedule=$(srcdir)/parallel_cursor_schedule
