--- a/src/test/isolation2/.gitignore
+++ b/src/test/isolation2/.gitignore
@@ -5,6 +5,8 @@ regression.out
 sql/ao_upgrade.sql
 expected/ao_upgrade.out
 expected/ao_upgrade_optimizer.out
+expected/parallel_cursor/*
+sql/parallel_cursor/*
 
 -- ignore generated pg_basebackup tests
 /sql/pg_basebackup*.sql
